# fpv9-haskell-workshop

./: .gitignore  README.md  Vagrantfile  provision.sh
bmp-editor/: bmp-editor.cabal
huskysay/: huskysay.cabal
huskysay/app/: Main.hs
huskysay/src/: Defaults.hs  Lib.hs  Types.hs
huskysay/test/: Spec.hs
